fix nq subheadline wrapping styles

--- a/src/components/modal/v2/styles/components/_header.scss
+++ b/src/components/modal/v2/styles/components/_header.scss
@@ -268,6 +268,10 @@
                 font-size: 1rem;
                 line-height: 20px;
             }
+
+            span {
+                white-space: nowrap;
+            }
         }
     }
 }
